# lsp-tui

./: .gitignore  Cargo.toml  README.md
src/: client.rs  handler.rs  main.rs  server.rs
src/core/: document.rs  error.rs  mod.rs  parser.rs  session.rs  syntax.rs  text.rs
src/tui/: app.rs  completion_menu.rs  highlight.rs  lsp_capabilities.rs  mod.rs  text_area.rs
