[package]
edition = "2021"
name = "lsp-tui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
dashmap = "5.4.0"
futures = "0.3.28"
indoc = "2.0.1"
lsp-text = {path = "../lsp-text"}
parity-tokio-ipc = "0.9.0"
ropey = "1.6.0"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = {version = "1.27.0", features = ["sync", "rt-multi-thread", "macros", "io-std", "io-util", "process"]}
tokio-util = "0.7.7"
tower-lsp = {path = "../tower-lsp", features = ["proposed"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"
tree-sitter-javascript = "0.20.0"
