[package]
edition = "2021"
name = "lsp-tui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
crossterm = {version = "0.26.1", features = ["event-stream"]}
dashmap = "5.4.0"
futures = "0.3.28"
indoc = "2.0.1"
lsp-positions = "0.3.1"
lsp-text = {path = "../lsp-text"}
ratatui = {path = "../ratatui"}
ropey = "1.6.0"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = {version = "1.27.0", features = ["sync", "rt-multi-thread", "macros", "io-std", "io-util", "process", "time"]}
tower-lsp = {path = "../tower-lsp", features = ["proposed"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"
tree-sitter-javascript = "0.20.0"
tui-textarea = {path = "../tui-textarea"}
