[package]
edition = "2021"
name = "lsp-tui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
crossterm = {version = "0.26.1", features = ["event-stream"]}
dashmap = "5.4.0"
elm-ui = {path = "../elm-ui-rs/crates/elm-ui", features = ["crossterm"]}
futures = "0.3.28"
indoc = "2.0.1"
kaolinite = {path = "../kaolinite"}
lsp-text = {path = "../lsp-text"}
once_cell = "1.17.1"
ratatui = {path = "../ratatui"}
regex = "1.7.3"
ropey = "1.6.0"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = {version = "1.27.0", features = ["sync", "rt-multi-thread", "macros", "io-std", "io-util", "process", "time"]}
toml = "0.7.3"
tower-lsp = {path = "../tower-lsp", features = ["proposed"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"
tree-sitter-javascript = "0.20.0"
